Enable multiple monitored event types in InotifyxDetector

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -69,6 +69,12 @@ monitoredEventType = IN_CLOSE_WRITE
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
 monitoredFormats   = [".tif", ".cbf"]
 
+
+# Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
+# the formats to be monitored, files in an other format will be be neglected
+# (needed if eventDetector is InotifyxDetector or WatchdogDetector)
+monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf"], "IN_MOVED_TO" : [".log"]}
+
 # Number of events stored to look for doubles
 # (needed if eventDetector is InotifyxDetector or HttpDetector)
 historySize        = 0
@@ -113,7 +119,6 @@ dataFetcherType    = getFromFile
 dataFetcherPort    = 50010
 
 # Number of parallel data streams
-# if this number is modifified, the port numbers also have to be adjusted
 numberOfStreams    = 1
 
 # Enable ZMQ pipe into storage system (uses the fixedStreamHost and fixedStreamPort)
