Enable multiple monitored event types in WatchdogDetector

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -61,12 +61,10 @@ monitoredDir       = /space/projects/zeromq-data-transfer/data/source
 #monitoredDir       = /rd
 
 # Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
-# (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-#monitoredEventType = SOME_STUPID_EVENT
+# (needed if eventDetector is WatchdogDetector)
 monitoredEventType = IN_CLOSE_WRITE
-#monitoredEventType  = IN_MOVED_TO
 # The formats to be monitored, files in an other format will be be neglected
-# (needed if eventDetector is InotifyxDetector or WatchdogDetector)
+# (needed if eventDetector is WatchdogDetector)
 monitoredFormats   = [".tif", ".cbf"]
 
 
@@ -83,8 +81,9 @@ historySize        = 0
 # if some files were missed should be activated
 # (needed if eventDetector is InotifyxDetector)
 useCleanUp         = False
-# "Intervall time (in seconds) used for clean up
-# (only needed if eventDetectorType is InotifyxDetector
+
+# Intervall time (in seconds) used for clean up resp. checking of events
+# (only needed if eventDetectorType is InotifyxDetector or WatchdogDetector)
 actionTime         = 150
 
 # Time (in seconds) since last modification after which a file will be seen as closed
