--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -60,15 +60,10 @@ monitoredDir       = /space/projects/zeromq-data-transfer/data/source
 #monitoredDir       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/source
 #monitoredDir       = /rd
 
-# The formats to be monitored, files in an other format will be be neglected
-# (needed if eventDetector is WatchdogDetector)
-monitoredFormats   = [".tif", ".cbf"]
-
-
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf"], "IN_MOVED_TO" : [".log"]}
+monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf", ".nxs"], "IN_MOVED_TO" : [".log"]}
 
 # Number of events stored to look for doubles
 # (needed if eventDetector is InotifyxDetector or HttpDetector)
