Removed PyTango dependency of HttpDetector

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -86,14 +86,12 @@ timeTillClosed     = 2
 # (needed if eventDetectorType is ZmqDetector)
 eventPort          = 50003
 
-# Tango device proxy for the detector
+# IP of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
-#detectorDevice     = "haspp10lab:10000/p10/eigerdectris/lab.01"
-detectorDevice     = haspp06:10000/p06/eigerdectris/exp.01
-# Tango device proxy for the filewriter
+eigerIp            = 192.168.138.52
+# API version of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
-#filewriterDevice   = "haspp10lab:10000/p10/eigerfilewriter/lab.01"
-filewriterDevice   = haspp06:10000/p06/eigerfilewriter/exp.01
+eigerApiVersion    = 1.5.0
 
 
 #########################################
