Some leftover name fixing

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -44,10 +44,10 @@ controlSubPort     = 50006
 #########################################
 
 # Type of event detector to use (options are: InotifyxDetector, WatchdogDetector, ZmqDetector, HttpGetDetector)
-eventDetectorType  = InotifyxDetector
+#eventDetectorType  = InotifyxDetector
 #eventDetectorType  = WatchdogDetector
 #eventDetectorType  = ZmqDetector
-#eventDetectorType  = HttpDetector
+eventDetectorType  = HttpDetector
 
 # Subdirectories to be monitored and to store data to
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector or dataFetcher is getFromFile)
@@ -99,9 +99,9 @@ eigerApiVersion    = 1.5.0
 #########################################
 
 # Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq", "getFromHttp")
-dataFetcherType    = getFromFile
+#dataFetcherType    = getFromFile
 #dataFetcherType    = getFromZmq
-#dataFetcherType    = getFromHttp
+dataFetcherType    = getFromHttp
 
 # If "getFromZmq" is specified as dataFetcherType it needs a port to listen to
 # (needed if eventDetectorType is ZmqDetector)
@@ -132,8 +132,8 @@ localTarget        = /space/projects/zeromq-data-transfer/data/target
 
 # Flag describing if the data should be stored in localTarget
 # (needed if dataFetcherType is getFromFile or getFromHttp)
-storeData          = True
+storeData          = False
 
 # Flag describing if the files should be removed from the source
 # (needed if dataFetcherType is getFromFile or getFromHttp)
-removeData         = True
+removeData         = False
