--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -3,9 +3,7 @@
 #########################################
 
 # Path where the logfile will be created
-logfilePath        = /space/projects/zeromq-data-transfer/logs
-#logfilePath        = /home/kuhnm/Arbeit/zeromq-data-transfer/logs
-#logfilePath        = /home/p11user/zeromq-data-transfer/logs
+logfilePath        = /opt/HiDRA/logs
 
 # Filename used for logging
 logfileName        = dataManager.log
@@ -14,7 +12,7 @@ logfileName        = dataManager.log
 logfileSize        = 10485760 ; #10 MB
 
 # Name with which the service should be running
-procname           = zeromq-data-transfer
+procname           = HiDRA
 
 #########################################
 ####   SignalHandler Configuration   ####
@@ -25,7 +23,6 @@ comPort            = 50000
 
 # List of hosts allowed to connect
 whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
-#whitelist          = ["localhost", "haspp11eval01", "it-hpc-cxi03"]
 
 # ZMQ port to get new requests
 requestPort        = 50001
@@ -56,8 +53,7 @@ fixSubdirs         = ["commissioning", "current", "local"]
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-monitoredDir       = /space/projects/zeromq-data-transfer/data/source
-#monitoredDir       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/source
+monitoredDir       = /opt/HiDRA/data/source
 #monitoredDir       = /rd
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
@@ -126,8 +122,7 @@ chunkSize          = 10485760 ; # = 1024*1024*10
 routerPort         = 50004
 
 # Target to move the files into
-localTarget        = /space/projects/zeromq-data-transfer/data/target
-#localTarget       = /home/kuhnm/Arbeit/zeromq-data-transfer/data/target
+localTarget        = /opt/HiDRA/data/target
 #localTarget       = /gpfs
 
 # Flag describing if the data should be stored in localTarget
