--- a/conf/dataManager_windows.conf
+++ b/conf/dataManager_windows.conf
@@ -3,7 +3,7 @@
 #########################################
 
 # Path where the logfile will be created
-logfilePath        = D:\zeromq-data-transfer\logs
+logfilePath        = D:\HiDRA\logs
 
 # Filename used for logging
 logfileName        = dataManager.log
@@ -11,6 +11,8 @@ logfileName        = dataManager.log
 # File size before rollover in B (linux only)
 logfileSize        = 10485760 ; #10 MB
 
+# Name with which the service should be running
+procname           = HiDRA
 
 #########################################
 ####   SignalHandler Configuration   ####
@@ -20,7 +22,7 @@ logfileSize        = 10485760 ; #10 MB
 comPort            = 50000
 
 # List of hosts allowed to connect
-whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx17858"]
+whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
 
 # ZMQ port to get new requests
 requestPort        = 50001
@@ -44,45 +46,47 @@ eventDetectorType  = WatchdogDetector
 #eventDetectorType  = ZmqDetector
 #eventDetectorType  = HttpDetector
 
-
 # Subdirectories to be monitored and to store data to
-# (needed if eventDetector is InotifyxDetector or WatchdogDetector or dataFetchter is getFromFile)
+# (needed if eventDetector is InotifyxDetector or WatchdogDetector or dataFetcher is getFromFile)
 fixSubdirs         = ["commissioning", "current", "local"]
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-monitoredDir       = D:\zeromq-data-transfer\data\source
+monitoredDir       = D:\HiDRA\data\source
 
-# Event type of files to be monitored (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...)
+# Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
+# the formats to be monitored, files in an other format will be be neglected
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-monitoredEventType = IN_CLOSE_WRITE
-
-# The formats to be monitored, files in an other format will be be neglected
-# (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-monitoredFormats   = [".tif", ".cbf"]
+monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf", ".nxs"], "IN_MOVED_TO" : [".log"]}
 
 # Number of events stored to look for doubles
 # (needed if eventDetector is InotifyxDetector or HttpDetector)
 historySize        = 0
 
+# Flag describing if a clean up thread which regularly checks
+# if some files were missed should be activated
+# (needed if eventDetector is InotifyxDetector)
+useCleanUp         = False
+
+# Intervall time (in seconds) used for clean up resp. checking of events
+# (only needed if eventDetectorType is InotifyxDetector or WatchdogDetector)
+actionTime         = 150
+
 # Time (in seconds) since last modification after which a file will be seen as closed
-# (needed if eventDetector is WatchdogDetector)
+# (needed if eventDetector is InotifyxDetector (for clean up) or WatchdogDetector)
 timeTillClosed     = 2
 
 # ZMQ port to get events from
 # (needed if eventDetectorType is ZmqDetector)
 eventPort          = 50003
 
-# Tango device proxy for the detector
+# IP of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
-#detectorDevice     = "haspp10lab:10000/p10/eigerdectris/lab.01"
-detectorDevice     = haspp06:10000/p06/eigerdectris/exp.01
-
-# Tango device proxy for the filewriter
+eigerIp            = 192.168.138.52
+# API version of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
-#filewriterDevice   = "haspp10lab:10000/p10/eigerfilewriter/lab.01"
-filewriterDevice   = haspp06:10000/p06/eigerfilewriter/exp.01
+eigerApiVersion    = 1.5.0
 
 
 #########################################
@@ -99,11 +103,10 @@ dataFetcherType    = getFromFile
 dataFetcherPort    = 50010
 
 # Number of parallel data streams
-# if this number is modifified, the port numbers also have to be adjusted
 numberOfStreams    = 1
 
 # Enable ZMQ pipe into storage system (uses the fixedStreamHost and fixedStreamPort)
-useDataStream      = True
+useDataStream      = False
 # Fixed host to send the data to with highest priority
 fixedStreamHost    = zitpcx19282
 # Fixed Port to send the data to with highest priority
@@ -118,12 +121,12 @@ chunkSize          = 10485760 ; # = 1024*1024*10
 routerPort         = 50004
 
 # Target to move the files into
-localTarget        = D:\zeromq-data-transfer\data\target
+localTarget        = D:\opt\HiDRA\data\target
 
 # Flag describing if the data should be stored in localTarget
 # (needed if dataFetcherType is getFromFile or getFromHttp)
 storeData          = False
 
 # Flag describing if the files should be removed from the source
-# (needed if dataFetcherType is getFromHttp)
-removeData         = True
+# (needed if dataFetcherType is getFromFile or getFromHttp)
+removeData         = False
