Renamed eventPort to eventDetPort in conf

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -80,7 +80,7 @@ timeTillClosed     = 2
 
 # ZMQ port to get events from
 # (needed if eventDetectorType is ZmqDetector)
-eventPort          = 50003
+eventDetPort       = 50003
 
 # IP of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
