--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -14,6 +14,9 @@ logfileSize        = 10485760 ; #10 MB
 # Name with which the service should be running
 procname           = HiDRA
 
+#extIp              = 131.169.185.121 ; #zitpcx19282
+extIp              = 131.169.251.55 ; #asap3-p00
+
 #########################################
 ####   SignalHandler Configuration   ####
 #########################################
