--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -12,10 +12,11 @@ logfileName        = dataManager.log
 logfileSize        = 10485760 ; #10 MB
 
 # Name with which the service should be running
-procname           = HiDRA
+procname           = hidra
 
-#extIp              = 131.169.185.121 ; #zitpcx19282
-extIp              = 131.169.251.55 ; #asap3-p00
+# IP of the interface to bind to for external communication
+extIp              = 131.169.185.121 ; #zitpcx19282
+#extIp              = 131.169.251.55 ; #asap3-p00
 
 #########################################
 ####   SignalHandler Configuration   ####
@@ -44,10 +45,10 @@ controlSubPort     = 50006
 #########################################
 
 # Type of event detector to use (options are: InotifyxDetector, WatchdogDetector, ZmqDetector, HttpGetDetector)
-#eventDetectorType  = InotifyxDetector
+eventDetectorType  = InotifyxDetector
 #eventDetectorType  = WatchdogDetector
 #eventDetectorType  = ZmqDetector
-eventDetectorType  = HttpDetector
+#eventDetectorType  = HttpDetector
 
 # Subdirectories to be monitored and to store data to
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector or dataFetcher is getFromFile)
@@ -63,6 +64,7 @@ monitoredDir       = /opt/HiDRA/data/source
 # the formats to be monitored, files in an other format will be be neglected
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
 monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf", ".nxs"], "IN_MOVED_TO" : [".log"]}
+#monitoredEvents = {"IN_MOVED_TO" : [".tif", ".cbf", ".nxs"], "IN_CLOSE_WRITE" : [".log"]}
 
 # Number of events stored to look for doubles
 # (needed if eventDetector is InotifyxDetector or HttpDetector)
@@ -98,9 +100,9 @@ eigerApiVersion    = 1.5.0
 #########################################
 
 # Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq", "getFromHttp")
-#dataFetcherType    = getFromFile
+dataFetcherType    = getFromFile
 #dataFetcherType    = getFromZmq
-dataFetcherType    = getFromHttp
+#dataFetcherType    = getFromHttp
 
 # If "getFromZmq" is specified as dataFetcherType it needs a port to listen to
 # (needed if eventDetectorType is ZmqDetector)
