Changed path building

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -89,7 +89,8 @@ eventDetPort       = 50003
 
 # IP of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
-eigerIp            = 192.168.138.52
+#eigerIp            = 192.168.138.52 ; #haspp11e1m.desy.de
+eigerIp            = 131.169.55.170 ; #lsdma-lab04.desy.de
 # API version of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
 eigerApiVersion    = 1.5.0
@@ -132,8 +133,8 @@ localTarget        = /opt/HiDRA/data/target
 
 # Flag describing if the data should be stored in localTarget
 # (needed if dataFetcherType is getFromFile or getFromHttp)
-storeData          = False
+storeData          = True
 
 # Flag describing if the files should be removed from the source
 # (needed if dataFetcherType is getFromFile or getFromHttp)
-removeData         = False
+removeData         = True
