--- a/test/API/Makefile
+++ b/test/API/Makefile
@@ -1,8 +1,8 @@
-test: test_dataIngestAPI.cpp
-	g++ -o test_dataIngestAPI.o test_dataIngestAPI.cpp -lzmq -std=c++0x
+test: test_hidraIngest.cpp
+	g++ -o test_hidraIngest.o test_hidraIngest.cpp -lzmq -std=c++0x
 
-example_dataIngestAPI_c: example_dataIngestAPI.c
-	gcc -o example_dataIngestAPI.x example_dataIngestAPI.c ../../APIs/dataIngestAPI.c -lzmq -ljson-c -I/usr/include/json-c/ -I../../APIs
+example_hidraIngest_c: example_hidraIngest.c
+	gcc -o example_hidraIngest.x example_hidraIngest.c ../../APIs/hidraIngest.c -lzmq -ljson-c -I/usr/include/json-c/ -I../../APIs
 
 example_dataTransferAPI_c: example_dataTransferAPI_nexus.c
 	gcc -o example_dataTransferAPI_nexus.x -ggdb example_dataTransferAPI_nexus.c ../../APIs/dataTransferAPI.c -lzmq -ljson-c -I/usr/include/json-c/ -I../../APIs
