--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -12,10 +12,12 @@ logfileName        = dataManager.log
 logfileSize        = 10485760 ; #10 MB
 
 # Name with which the service should be running
-procname           = HiDRA
+procname           = hidra
 
+# IP of the interface to bind to for external communication
+extIp              = 0.0.0.0 ; #zitpcx19282
 #extIp              = 131.169.185.121 ; #zitpcx19282
-extIp              = 131.169.251.55 ; #asap3-p00
+#extIp              = 131.169.251.55 ; #asap3-p00
 
 #########################################
 ####   SignalHandler Configuration   ####
@@ -44,10 +46,10 @@ controlSubPort     = 50006
 #########################################
 
 # Type of event detector to use (options are: InotifyxDetector, WatchdogDetector, ZmqDetector, HttpGetDetector)
-#eventDetectorType  = InotifyxDetector
+eventDetectorType  = InotifyxDetector
 #eventDetectorType  = WatchdogDetector
 #eventDetectorType  = ZmqDetector
-eventDetectorType  = HttpDetector
+#eventDetectorType  = HttpDetector
 
 # Subdirectories to be monitored and to store data to
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector or dataFetcher is getFromFile)
@@ -63,6 +65,8 @@ monitoredDir       = /opt/HiDRA/data/source
 # the formats to be monitored, files in an other format will be be neglected
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
 monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf", ".nxs"], "IN_MOVED_TO" : [".log"]}
+#monitoredEvents = {"IN_MOVED_TO" : [".tif", ".cbf", ".nxs"], "IN_CLOSE_WRITE" : [".log"]}
+#monitoredEvents = {"NO_EVENT_MONITORED" : [".cbf"]}
 
 # Number of events stored to look for doubles
 # (needed if eventDetector is InotifyxDetector or HttpDetector)
@@ -87,7 +91,8 @@ eventDetPort       = 50003
 
 # IP of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
-eigerIp            = 192.168.138.52
+#eigerIp            = 192.168.138.52 ; #haspp11e1m.desy.de
+eigerIp            = 131.169.55.170 ; #lsdma-lab04.desy.de
 # API version of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
 eigerApiVersion    = 1.5.0
@@ -98,9 +103,9 @@ eigerApiVersion    = 1.5.0
 #########################################
 
 # Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq", "getFromHttp")
-#dataFetcherType    = getFromFile
+dataFetcherType    = getFromFile
 #dataFetcherType    = getFromZmq
-dataFetcherType    = getFromHttp
+#dataFetcherType    = getFromHttp
 
 # If "getFromZmq" is specified as dataFetcherType it needs a port to listen to
 # (needed if eventDetectorType is ZmqDetector)
@@ -130,8 +135,8 @@ localTarget        = /opt/HiDRA/data/target
 
 # Flag describing if the data should be stored in localTarget
 # (needed if dataFetcherType is getFromFile or getFromHttp)
-storeData          = False
+storeData          = True
 
 # Flag describing if the files should be removed from the source
 # (needed if dataFetcherType is getFromFile or getFromHttp)
-removeData         = False
+removeData         = True
