Fixed some IPs and a missing function defintion in header

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -15,7 +15,7 @@ logfileSize        = 10485760 ; #10 MB
 procname           = hidra
 
 # IP of the interface to bind to for external communication
-extIp              = 0.0.0.0 ; #zitpcx19282
+extIp              = 0.0.0.0
 #extIp              = 131.169.185.121 ; #zitpcx19282
 #extIp              = 131.169.251.55 ; #asap3-p00
 
@@ -118,6 +118,7 @@ numberOfStreams    = 1
 useDataStream      = False
 # Fixed host to send the data to with highest priority
 fixedStreamHost    = zitpcx19282
+#fixedStreamHost    = zitpcx22614w
 # Fixed Port to send the data to with highest priority
 fixedStreamPort    = 50100
 
