--- a/conf/nexusReceiver.conf
+++ b/conf/nexusReceiver.conf
@@ -26,6 +26,7 @@ targetDir         = /opt/HiDRA/data/zmq_target
 
 # Local IP to connect dataStream to
 dataStreamIp      = 131.169.185.121     ;# zitpcx19282.desy.de
+#dataStreamIp      = 131.169.185.34     ;# zitpcx22614.desy.de
 
 # TCP port of data pipe
 dataStreamPort    = 50100
