Changed opt and tmp path from HiDRA to hidra

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -3,7 +3,7 @@
 #########################################
 
 # Path where the logfile will be created
-logfilePath        = /opt/HiDRA/logs
+logfilePath        = /opt/hidra/logs
 
 # Filename used for logging
 logfileName        = dataManager.log
@@ -58,7 +58,7 @@ fixSubdirs         = ["commissioning", "current", "local"]
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-monitoredDir       = /opt/HiDRA/data/source
+monitoredDir       = /opt/hidra/data/source
 #monitoredDir       = /rd
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
@@ -131,7 +131,7 @@ chunkSize          = 10485760 ; # = 1024*1024*10
 routerPort         = 50004
 
 # Target to move the files into
-localTarget        = /opt/HiDRA/data/target
+localTarget        = /opt/hidra/data/target
 #localTarget       = /gpfs
 
 # Flag describing if the data should be stored in localTarget
