--- a/conf/dataManager_windows.conf
+++ b/conf/dataManager_windows.conf
@@ -3,7 +3,7 @@
 #########################################
 
 # Path where the logfile will be created
-logfilePath        = D:\HiDRA\logs
+logfilePath        = D:\hidra\logs
 
 # Filename used for logging
 logfileName        = dataManager.log
@@ -12,7 +12,7 @@ logfileName        = dataManager.log
 logfileSize        = 10485760 ; #10 MB
 
 # Name with which the service should be running
-procname           = HiDRA
+procname           = hidra
 
 #########################################
 ####   SignalHandler Configuration   ####
@@ -53,7 +53,7 @@ fixSubdirs         = ["commissioning", "current", "local"]
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-monitoredDir       = D:\HiDRA\data\source
+monitoredDir       = D:\hidra\data\source
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
@@ -121,7 +121,7 @@ chunkSize          = 10485760 ; # = 1024*1024*10
 routerPort         = 50004
 
 # Target to move the files into
-localTarget        = D:\opt\HiDRA\data\target
+localTarget        = D:\opt\hidra\data\target
 
 # Flag describing if the data should be stored in localTarget
 # (needed if dataFetcherType is getFromFile or getFromHttp)
