--- a/conf/dataReceiver.conf
+++ b/conf/dataReceiver.conf
@@ -3,7 +3,7 @@
 #########################################
 
 # Path where logfile will be created
-logfilePath       = /opt/HiDRA/logs
+logfilePath       = /opt/hidra/logs
 
 # Filename used for logging
 logfileName       = dataReceiver.log
@@ -22,7 +22,7 @@ whitelist         = None
 #whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "lsdma-lab04"]
 
 # Where incoming data will be stored to
-targetDir         = /opt/HiDRA/data/zmq_target
+targetDir         = /opt/hidra/data/zmq_target
 
 # Local IP to connect dataStream to
 dataStreamIp      = 131.169.185.121     ;# zitpcx19282.desy.de
