Added new config file for windows + error message bug

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -45,18 +45,21 @@ controlSubPort     = 50006
 ####   EventDetector Configuration   ####
 #########################################
 
-# Type of event detector to use (options are: InotifyxDetector, WatchdogDetector, ZmqDetector, HttpGetDetector)
+# Type of event detector to use
+# (options are: InotifyxDetector, WatchdogDetector, ZmqDetector, HttpGetDetector)
 eventDetectorType  = InotifyxDetector
 #eventDetectorType  = WatchdogDetector
 #eventDetectorType  = ZmqDetector
 #eventDetectorType  = HttpDetector
 
 # Subdirectories to be monitored and to store data to
-# (needed if eventDetector is InotifyxDetector or WatchdogDetector or dataFetcher is getFromFile)
+# (needed if eventDetector is InotifyxDetector or WatchdogDetector
+#  or if dataFetcher is getFromFile)
 fixSubdirs         = ["commissioning", "current", "local"]
 
 # Directory to be monitor for changes
-# Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
+# Inside this directory only the subdirectories "commissioning", "current"
+# and "local" are monitored
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
 monitoredDir       = /opt/hidra/data/source
 #monitoredDir       = /rd
@@ -64,8 +67,10 @@ monitoredDir       = /opt/hidra/data/source
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf", ".nxs"], "IN_MOVED_TO" : [".log"]}
-#monitoredEvents = {"IN_MOVED_TO" : [".tif", ".cbf", ".nxs"], "IN_CLOSE_WRITE" : [".log"]}
+monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf", ".nxs"],
+                   "IN_MOVED_TO" : [".log"]}
+#monitoredEvents = {"IN_MOVED_TO" : [".tif", ".cbf", ".nxs"],
+#                   "IN_CLOSE_WRITE" : [".log"]}
 #monitoredEvents = {"NO_EVENT_MONITORED" : [".cbf"]}
 
 # Number of events stored to look for doubles
@@ -102,7 +107,8 @@ eigerApiVersion    = 1.5.0
 ####    DataFetcher Configuration    ####
 #########################################
 
-# Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq", "getFromHttp")
+# Module with methods specifying how to get the data
+# (options are "getFromFile", "getFromZmq", "getFromHttp")
 dataFetcherType    = getFromFile
 #dataFetcherType    = getFromZmq
 #dataFetcherType    = getFromHttp
@@ -114,7 +120,8 @@ dataFetcherPort    = 50010
 # Number of parallel data streams
 numberOfStreams    = 1
 
-# Enable ZMQ pipe into storage system (uses the fixedStreamHost and fixedStreamPort)
+# Enable ZMQ pipe into storage system
+# (uses the fixedStreamHost and fixedStreamPort)
 useDataStream      = False
 # Fixed host to send the data to with highest priority
 fixedStreamHost    = zitpcx19282
