--- a/conf/dataManager_windows.conf
+++ b/conf/dataManager_windows.conf
@@ -14,6 +14,11 @@ logfileSize        = 10485760 ; #10 MB
 # Name with which the service should be running
 procname           = hidra
 
+# IP of the interface to bind to for external communication
+extIp              = 0.0.0.0
+#extIp              = 131.169.185.121 ; #zitpcx19282
+#extIp              = 131.169.251.55 ; #asap3-p00
+
 #########################################
 ####   SignalHandler Configuration   ####
 #########################################
@@ -40,25 +45,32 @@ controlSubPort     = 50006
 ####   EventDetector Configuration   ####
 #########################################
 
-# Type of event detector to use (options are: InotifyxDetector, WatchdogDetector, ZmqDetector, HttpGetDetector)
+# Type of event detector to use
+# (options are: InotifyxDetector, WatchdogDetector, ZmqDetector, HttpGetDetector)
 #eventDetectorType  = InotifyxDetector
 eventDetectorType  = WatchdogDetector
 #eventDetectorType  = ZmqDetector
 #eventDetectorType  = HttpDetector
 
 # Subdirectories to be monitored and to store data to
-# (needed if eventDetector is InotifyxDetector or WatchdogDetector or dataFetcher is getFromFile)
+# (needed if eventDetector is InotifyxDetector or WatchdogDetector
+#  or if dataFetcher is getFromFile)
 fixSubdirs         = ["commissioning", "current", "local"]
 
 # Directory to be monitor for changes
-# Inside this directory only the subdirectories "commissioning", "current" and "local" are monitored
+# Inside this directory only the subdirectories "commissioning", "current"
+# and "local" are monitored
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
 monitoredDir       = D:\hidra\data\source
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
 # (needed if eventDetector is InotifyxDetector or WatchdogDetector)
-monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf", ".nxs"], "IN_MOVED_TO" : [".log"]}
+monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf", ".nxs"],
+                   "IN_MOVED_TO" : [".log"]}
+#monitoredEvents = {"IN_MOVED_TO" : [".tif", ".cbf", ".nxs"],
+#                   "IN_CLOSE_WRITE" : [".log"]}
+#monitoredEvents = {"NO_EVENT_MONITORED" : [".cbf"]}
 
 # Number of events stored to look for doubles
 # (needed if eventDetector is InotifyxDetector or HttpDetector)
@@ -79,11 +91,12 @@ timeTillClosed     = 2
 
 # ZMQ port to get events from
 # (needed if eventDetectorType is ZmqDetector)
-eventPort          = 50003
+eventDetPort       = 50003
 
 # IP of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
-eigerIp            = 192.168.138.52
+#eigerIp            = 192.168.138.52 ; #haspp11e1m.desy.de
+eigerIp            = 131.169.55.170 ; #lsdma-lab04.desy.de
 # API version of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
 eigerApiVersion    = 1.5.0
@@ -93,7 +106,8 @@ eigerApiVersion    = 1.5.0
 ####    DataFetcher Configuration    ####
 #########################################
 
-# Module with methods specifying how to get the data (options are "getFromFile", "getFromZmq", "getFromHttp")
+# Module with methods specifying how to get the data
+# (options are "getFromFile", "getFromZmq", "getFromHttp")
 dataFetcherType    = getFromFile
 #dataFetcherType    = getFromZmq
 #dataFetcherType    = getFromHttp
@@ -105,7 +119,8 @@ dataFetcherPort    = 50010
 # Number of parallel data streams
 numberOfStreams    = 1
 
-# Enable ZMQ pipe into storage system (uses the fixedStreamHost and fixedStreamPort)
+# Enable ZMQ pipe into storage system
+# (uses the fixedStreamHost and fixedStreamPort)
 useDataStream      = False
 # Fixed host to send the data to with highest priority
 fixedStreamHost    = zitpcx19282
