--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -9,7 +9,8 @@ logfilePath        = /opt/hidra/logs
 logfileName        = dataManager.log
 
 # File size before rollover in B (linux only)
-logfileSize        = 10485760 ; #10 MB
+#10 MB
+logfileSize        = 10485760
 
 # Name with which the service should be running
 procname           = hidra
@@ -47,6 +48,7 @@ controlSubPort     = 50006
 
 # Type of event detector to use
 # (options are: InotifyxDetector, WatchdogDetector, ZmqDetector, HttpGetDetector)
+# Inotifyx is not python3 compatible, see https://bugs.launchpad.net/inotifyx/+bug/1006053
 eventDetectorType  = InotifyxDetector
 #eventDetectorType  = WatchdogDetector
 #eventDetectorType  = ZmqDetector
@@ -84,7 +86,8 @@ useCleanUp         = False
 
 # Intervall time (in seconds) used for clean up resp. checking of events
 # (only needed if eventDetectorType is InotifyxDetector or WatchdogDetector)
-actionTime         = 150
+#actionTime         = 150
+actionTime         = 10
 
 # Time (in seconds) since last modification after which a file will be seen as closed
 # (needed if eventDetector is InotifyxDetector (for clean up) or WatchdogDetector)
@@ -96,8 +99,10 @@ eventDetPort       = 50003
 
 # IP of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
-#eigerIp            = 192.168.138.52 ; #haspp11e1m.desy.de
-eigerIp            = 131.169.55.170 ; #lsdma-lab04.desy.de
+#haspp11e1m.desy.de
+#eigerIp            = 192.168.138.52
+#lsdma-lab04.desy.de
+eigerIp            = 131.169.55.170
 # API version of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
 eigerApiVersion    = 1.5.0
@@ -130,8 +135,10 @@ fixedStreamHost    = zitpcx19282
 fixedStreamPort    = 50100
 
 # Chunk size of file-parts getting send via zmq
-chunkSize          = 10485760 ; # = 1024*1024*10
-#chunkSize          = 1073741824 ; # = 1024*1024*1024
+#1024*1024*10
+chunkSize          = 10485760
+#1024*1024*1024
+#chunkSize          = 1073741824
 
 # ZMQ-router port which coordinates the load-balancing to the worker-processes
 # (needed if running on Windows)
