--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -17,6 +17,7 @@ procname           = hidra
 
 # IP of the interface to bind to for external communication
 extIp              = 0.0.0.0
+#extIp              = zitpcx19282
 #extIp              = 131.169.185.121 ; #zitpcx19282
 #extIp              = 131.169.251.55 ; #asap3-p00
 
