Added possibility to set whitelist to None

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -30,6 +30,7 @@ comPort            = 50000
 
 # List of hosts allowed to connect
 whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
+#whitelist          = None
 
 # ZMQ port to get new requests
 requestPort        = 50001
