Added possibility to specify Eiger IP through DNS name

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -103,8 +103,9 @@ eventDetPort       = 50003
 # (needed if eventDetectorType is HttpDetector)
 #haspp11e1m.desy.de
 #eigerIp            = 192.168.138.52
+eigerIp            = lsdma-lab04
 #lsdma-lab04.desy.de
-eigerIp            = 131.169.55.170
+#eigerIp            = 131.169.55.170
 # API version of the Eiger detector
 # (needed if eventDetectorType is HttpDetector)
 eigerApiVersion    = 1.5.0
@@ -152,8 +153,8 @@ localTarget        = /opt/hidra/data/target
 
 # Flag describing if the data should be stored in localTarget
 # (needed if dataFetcherType is getFromFile or getFromHttp)
-storeData          = True
+storeData          = False
 
 # Flag describing if the files should be removed from the source
 # (needed if dataFetcherType is getFromFile or getFromHttp)
-removeData         = True
+removeData         = False
