Renamed event detector and data fetcher modules

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -49,28 +49,28 @@ controlSubPort     = 50006
 #########################################
 
 # Type of event detector to use
-# (options are: InotifyxDetector, WatchdogDetector, ZmqDetector, HttpGetDetector)
+# (options are: inotifyx_detector, watchdog_detector, zmq_detector, http_detector)
 # Inotifyx is not python3 compatible, see https://bugs.launchpad.net/inotifyx/+bug/1006053
-eventDetectorType  = InotifyxDetector
-#eventDetectorType  = WatchdogDetector
-#eventDetectorType  = ZmqDetector
-#eventDetectorType  = HttpDetector
+eventDetectorType  = inotifyx_detector
+#eventDetectorType  = watchdog_detector
+#eventDetectorType  = zmq_detector
+#eventDetectorType  = http_detector
 
 # Subdirectories to be monitored and to store data to
-# (needed if eventDetector is InotifyxDetector or WatchdogDetector
-#  or if dataFetcher is getFromFile)
+# (needed if eventDetector is inotifyx_detector or watchdog_detector
+#  or if dataFetcher is file_fetcher)
 fixSubdirs         = ["commissioning", "current", "local"]
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
 # and "local" are monitored
-# (needed if eventDetector is InotifyxDetector or WatchdogDetector)
+# (needed if eventDetector is inotifyx_detector or watchdog_detector)
 monitoredDir       = /opt/hidra/data/source
 #monitoredDir       = /rd
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
-# (needed if eventDetector is InotifyxDetector or WatchdogDetector)
+# (needed if eventDetector is inotifyx_detector or watchdog_detector)
 monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf", ".nxs"],
                    "IN_MOVED_TO" : [".log"]}
 #monitoredEvents = {"IN_MOVED_TO" : [".tif", ".cbf", ".nxs"],
@@ -78,36 +78,36 @@ monitoredEvents = {"IN_CLOSE_WRITE" : [".tif", ".cbf", ".nxs"],
 #monitoredEvents = {"NO_EVENT_MONITORED" : [".cbf"]}
 
 # Number of events stored to look for doubles
-# (needed if eventDetector is InotifyxDetector or HttpDetector)
+# (needed if eventDetector is inotifyx_detector or http_detector)
 historySize        = 0
 
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
-# (needed if eventDetector is InotifyxDetector)
+# (needed if eventDetector is inotifyx_detector)
 useCleanUp         = False
 
 # Intervall time (in seconds) used for clean up resp. checking of events
-# (only needed if eventDetectorType is InotifyxDetector or WatchdogDetector)
+# (only needed if eventDetectorType is inotifyx_detector or watchdog_detector)
 #actionTime         = 150
 actionTime         = 10
 
 # Time (in seconds) since last modification after which a file will be seen as closed
-# (needed if eventDetector is InotifyxDetector (for clean up) or WatchdogDetector)
+# (needed if eventDetector is inotifyx_detector (for clean up) or watchdog_detector)
 timeTillClosed     = 2
 
 # ZMQ port to get events from
-# (needed if eventDetectorType is ZmqDetector)
+# (needed if eventDetectorType is zmq_detector)
 eventDetPort       = 50003
 
 # IP of the Eiger detector
-# (needed if eventDetectorType is HttpDetector)
+# (needed if eventDetectorType is http_detector)
 #haspp11e1m.desy.de
 #eigerIp            = 192.168.138.52
 eigerIp            = lsdma-lab04
 #lsdma-lab04.desy.de
 #eigerIp            = 131.169.55.170
 # API version of the Eiger detector
-# (needed if eventDetectorType is HttpDetector)
+# (needed if eventDetectorType is http_detector)
 eigerApiVersion    = 1.5.0
 
 
@@ -116,13 +116,13 @@ eigerApiVersion    = 1.5.0
 #########################################
 
 # Module with methods specifying how to get the data
-# (options are "getFromFile", "getFromZmq", "getFromHttp")
-dataFetcherType    = getFromFile
-#dataFetcherType    = getFromZmq
-#dataFetcherType    = getFromHttp
+# (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
+dataFetcherType    = file_fetcher
+#dataFetcherType    = zmq_fetcher
+#dataFetcherType    = http_fetcher
 
-# If "getFromZmq" is specified as dataFetcherType it needs a port to listen to
-# (needed if eventDetectorType is ZmqDetector)
+# If "zmq_fetcher" is specified as dataFetcherType it needs a port to listen to
+# (needed if eventDetectorType is zmq_detector)
 dataFetcherPort    = 50010
 
 # Number of parallel data streams
@@ -152,9 +152,9 @@ localTarget        = /opt/hidra/data/target
 #localTarget       = /gpfs
 
 # Flag describing if the data should be stored in localTarget
-# (needed if dataFetcherType is getFromFile or getFromHttp)
+# (needed if dataFetcherType is file_fetcher or http_fetcher)
 storeData          = False
 
 # Flag describing if the files should be removed from the source
-# (needed if dataFetcherType is getFromFile or getFromHttp)
+# (needed if dataFetcherType is file_fetcher or http_fetcher)
 removeData         = False
