PEP8 compliance for variables, config checks in moduls and generic config/argument parsing in DataManager

--- a/conf/dataManager.conf
+++ b/conf/dataManager.conf
@@ -3,112 +3,113 @@
 #########################################
 
 # Path where the logfile will be created
-logfilePath        = /opt/hidra/logs
+log_path            = /opt/hidra/logs
 
 # Filename used for logging
-logfileName        = dataManager.log
+log_name            = dataManager.log
 
 # File size before rollover in B (linux only)
-#10 MB
-logfileSize        = 10485760
+# 10 MB
+log_size            = 10485760
 
 # Name with which the service should be running
-procname           = hidra
+procname            = hidra
 
 # IP of the interface to bind to for external communication
-extIp              = 0.0.0.0
-#extIp              = zitpcx19282
-#extIp              = 131.169.185.121 ; #zitpcx19282
-#extIp              = 131.169.251.55 ; #asap3-p00
+ext_ip               = 0.0.0.0
+#ext_ip              = zitpcx19282
+#ext_ip              = 131.169.185.121 ; #zitpcx19282
+#ext_ip              = 131.169.251.55 ; #asap3-p00
 
 #########################################
 ####   SignalHandler Configuration   ####
 #########################################
 
 # Port number to receive signals from
-comPort            = 50000
+com_port            = 50000
 
 # List of hosts allowed to connect
-whitelist          = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
-#whitelist          = None
+whitelist           = ["localhost", "zitpcx19282", "zitpcx22614", "zitpcx22614w", "zitpcx22614.fritz.box", "lsdma-lab04", "haspp11eval01", "it-hpc-cxi03", "max-cfel015"]
+#whitelist           = None
 
 # ZMQ port to get new requests
-requestPort        = 50001
+request_port        = 50001
 
 # ZMQ port to forward requests
 # (needed if running on Windows)
-requestFwPort      = 50002
+request_fw_port     = 50002
 
 # ZMQ port to disribute control signals
 # (needed if running on Windows)
-controlPubPort     = 50005
-controlSubPort     = 50006
+control_pub_port    = 50005
+control_sub_port    = 50006
 
 #########################################
 ####   EventDetector Configuration   ####
 #########################################
 
-# Type of event detector to use
-# (options are: inotifyx_detector, watchdog_detector, zmq_detector, http_detector)
-# Inotifyx is not python3 compatible, see https://bugs.launchpad.net/inotifyx/+bug/1006053
-eventDetectorType  = inotifyx_detector
-#eventDetectorType  = watchdog_detector
-#eventDetectorType  = zmq_detector
-#eventDetectorType  = http_detector
+# Type of event detector to use (options are:
+# inotifyx_detector, watchdog_detector, zmq_detector, http_detector)
+# Inotifyx is not python3 compatible,
+# see https://bugs.launchpad.net/inotifyx/+bug/1006053
+event_detector_type = inotifyx_detector
+#event_detector_type = watchdog_detector
+#event_detector_type = zmq_detector
+#event_detector_type = http_detector
 
 # Subdirectories to be monitored and to store data to
 # (needed if eventDetector is inotifyx_detector or watchdog_detector
 #  or if dataFetcher is file_fetcher)
-fixSubdirs         = ["commissioning", "current", "local"]
+fix_subdirs          = ["commissioning", "current", "local"]
 
 # Directory to be monitor for changes
 # Inside this directory only the subdirectories "commissioning", "current"
 # and "local" are monitored
-# (needed if eventDetector is inotifyx_detector or watchdog_detector)
-monitoredDir       = /opt/hidra/data/source
-#monitoredDir       = /rd
+# (needed if event detector is inotifyx_detector or watchdog_detector)
+monitored_dir        = /opt/hidra/data/source
+#monitored_dir       = /rd
 
 # Event type of files (options are: IN_CLOSE_WRITE, IN_MOVED_TO, ...) and
 # the formats to be monitored, files in an other format will be be neglected
-# (needed if eventDetector is inotifyx_detector or watchdog_detector)
-monitoredEvents = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
-                   "IN_MOVED_TO": [".log"]}
-#monitoredEvents = {"IN_MOVED_TO": [".tif", ".cbf", ".nxs"],
-#                   "IN_CLOSE_WRITE": [".log"]}
-#monitoredEvents = {"NO_EVENT_MONITORED": [".cbf"]}
+# (needed if event detector is inotifyx_detector or watchdog_detector)
+monitored_events     = {"IN_CLOSE_WRITE": [".tif", ".cbf", ".nxs"],
+                        "IN_MOVED_TO": [".log"]}
+#monitored events     = {"IN_MOVED_TO": [".tif", ".cbf", ".nxs"],
+#                        "IN_CLOSE_WRITE": [".log"]}
+#monitored_events     = {"NO_EVENT_MONITORED": [".cbf"]}
 
 # Number of events stored to look for doubles
 # (needed if eventDetector is inotifyx_detector or http_detector)
-historySize        = 0
+history_size         = 0
 
 # Flag describing if a clean up thread which regularly checks
 # if some files were missed should be activated
 # (needed if eventDetector is inotifyx_detector)
-useCleanUp         = False
+use_cleanup          = False
 
 # Intervall time (in seconds) used for clean up resp. checking of events
-# (only needed if eventDetectorType is inotifyx_detector or watchdog_detector)
-#actionTime         = 150
-actionTime         = 10
+# (only needed if event_detector_type is inotifyx_detector or watchdog_detector)
+#action_time          = 150
+action_time          = 10
 
 # Time (in seconds) since last modification after which a file will be seen as closed
 # (needed if eventDetector is inotifyx_detector (for clean up) or watchdog_detector)
-timeTillClosed     = 2
+time_till_closed     = 2
 
 # ZMQ port to get events from
-# (needed if eventDetectorType is zmq_detector)
-eventDetPort       = 50003
+# (needed if event_detector_type is zmq_detector)
+event_det_port       = 50003
 
 # IP of the Eiger detector
-# (needed if eventDetectorType is http_detector)
+# (needed if event_detector_type is http_detector)
 #haspp11e1m.desy.de
-#eigerIp            = 192.168.138.52
-eigerIp            = lsdma-lab04
+#eiger_ip             = 192.168.138.52
+eiger_ip             = lsdma-lab04
 #lsdma-lab04.desy.de
-#eigerIp            = 131.169.55.170
+#eiger_ip             = 131.169.55.170
 # API version of the Eiger detector
-# (needed if eventDetectorType is http_detector)
-eigerApiVersion    = 1.5.0
+# (needed if event_detector_type is http_detector)
+eiger_api_version    = 1.5.0
 
 
 #########################################
@@ -117,44 +118,44 @@ eigerApiVersion    = 1.5.0
 
 # Module with methods specifying how to get the data
 # (options are "file_fetcher", "zmq_fetcher", "http_fetcher")
-dataFetcherType    = file_fetcher
-#dataFetcherType    = zmq_fetcher
-#dataFetcherType    = http_fetcher
+data_fetcher_type    = file_fetcher
+#data_fetcher_type    = zmq_fetcher
+#data_fetcher_type    = http_fetcher
 
-# If "zmq_fetcher" is specified as dataFetcherType it needs a port to listen to
-# (needed if eventDetectorType is zmq_detector)
-dataFetcherPort    = 50010
+# If "zmq_fetcher" is specified as data_fetcher_type it needs a port to listen to
+# (needed if event_detector_type is zmq_detector)
+data_fetcher_port    = 50010
 
 # Number of parallel data streams
-numberOfStreams    = 1
+number_of_streams    = 1
 
 # Enable ZMQ pipe into storage system
-# (uses the fixedStreamHost and fixedStreamPort)
-useDataStream      = False
+# (uses the fixed_stream_host and fixed_stream_port)
+use_data_stream      = False
 # Fixed host to send the data to with highest priority
-fixedStreamHost    = zitpcx19282
-#fixedStreamHost    = zitpcx22614w
+fixed_stream_host    = zitpcx19282
+#fixed_stream_host    = zitpcx22614w
 # Fixed Port to send the data to with highest priority
-fixedStreamPort    = 50100
+fixed_stream_port    = 50100
 
 # Chunk size of file-parts getting send via zmq
 #1024*1024*10
-chunkSize          = 10485760
+chunksize            = 10485760
 #1024*1024*1024
-#chunkSize          = 1073741824
+#chunksize            = 1073741824
 
 # ZMQ-router port which coordinates the load-balancing to the worker-processes
 # (needed if running on Windows)
-routerPort         = 50004
+router_port          = 50004
 
 # Target to move the files into
-localTarget        = /opt/hidra/data/target
-#localTarget       = /gpfs
+local_target         = /opt/hidra/data/target
+#local_target         = /gpfs
 
 # Flag describing if the data should be stored in localTarget
-# (needed if dataFetcherType is file_fetcher or http_fetcher)
-storeData          = False
+# (needed if data_fetcher_type is file_fetcher or http_fetcher)
+store_data           = False
 
 # Flag describing if the files should be removed from the source
-# (needed if dataFetcherType is file_fetcher or http_fetcher)
-removeData         = False
+# (needed if data_fetcher_type is file_fetcher or http_fetcher)
+remove_data          = False
