--- a/conf/dataReceiver.conf
+++ b/conf/dataReceiver.conf
@@ -3,13 +3,14 @@
 #########################################
 
 # Path where logfile will be created
-logfilePath       = /opt/hidra/logs
+log_path          = /opt/hidra/logs
 
 # Filename used for logging
-logfileName       = dataReceiver.log
+log_name          = dataReceiver.log
 
 # File size before rollover in B (linux only)
-logfileSize       = 104857600 ; #100 MB
+# 100MB
+log_size          = 104857600
 
 #########################################
 ####   DataReceiver Configuration   ####
@@ -17,17 +18,18 @@ logfileSize       = 104857600 ; #100 MB
 #
 # List of hosts allowed to receive data from
 
-#whitelist         = a3p02.1-hosts
-whitelist         = None
-#whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "lsdma-lab04"]
+#whitelist           = a3p02.1-hosts
+whitelist           = None
+#whitelist           = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "lsdma-lab04"]
 
 # Where incoming data will be stored to
-targetDir         = /opt/hidra/data/zmq_target
+target_dir          = /opt/hidra/data/zmq_target
 
 # Local IP to connect dataStream to
-dataStreamIp      = 131.169.185.121     ;# zitpcx19282.desy.de
+# zitpcx19282.desy.d
+data_stream_ip      = 131.169.185.121
 
 # TCP port of data pipe
-dataStreamPort    = 50100
+data_stream_port    = 50100
 
 
