--- a/conf/nexusReceiver.conf
+++ b/conf/nexusReceiver.conf
@@ -3,13 +3,14 @@
 #########################################
 
 # Path where logfile will be created
-logfilePath       = /opt/hidra/logs
+log_path          = /opt/hidra/logs
 
 # Filename used for logging
-logfileName       = nexusReceiver.log
+log_name          = nexus_receiver.log
 
 # File size before rollover in B (linux only)
-logfileSize       = 104857600 ; #100 MB
+# 100 MB
+log_size          = 104857600
 
 #########################################
 ####   DataReceiver Configuration   ####
@@ -22,13 +23,15 @@ whitelist         = None
 #whitelist         = ["localhost", "zitpcx19282.desy.de", "zitpcx22614", "lsdma-lab04"]
 
 # Where incoming data will be stored to
-targetDir         = /opt/hidra/data/zmq_target
+target_dir        = /opt/hidra/data/zmq_target
 
 # Local IP to connect dataStream to
-dataStreamIp      = 131.169.185.121     ;# zitpcx19282.desy.de
-#dataStreamIp      = 131.169.185.34     ;# zitpcx22614.desy.de
+# zitpcx19282.desy.de
+data_stream_ip    = 131.169.185.121
+# zitpcx22614.desy.de
+#dataStreamIp      = 131.169.185.34
 
 # TCP port of data pipe
-dataStreamPort    = 50100
+data_stream_port  = 50100
 
 
